fixed overlapping content

--- a/info.css
+++ b/info.css
@@ -58,10 +58,16 @@ button {
 }
 .links {
     text-align: center;
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 @media (max-width: 470px) {
     .links>a{
-        margin: 0px;
+        margin: 5px;
     }
+}
+.intro {
+    margin: 10px;
 }
